fix 90% warning in code